--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,8 @@
 <h1>Words and Definitions</h1>
 <p>Click on a word to see its definitions and add new ones.</p>
 <div class="">
-  <%= @words.each do |word| %>
-  <li><a href="/word/ <%= word.word %>" ></a></li>
-  <%= end %>
+  <% @words.each do |word| %>
+    <li><a href="/word/ <%= word.word_id %> " > <%= word.word %> </a></li>
+  <% end %>
 </div>
+<a href="/new_word">Add a new word</a>
