--- a/views/word.erb
+++ b/views/word.erb
@@ -2,12 +2,12 @@
 <div class="">
   <ol>
     <% @definitions.each do |definition| %>
-      <li> <%= @definitions.definition %> </li>
+      <li> <%= definition.definition %> </li>
     <% end %>
   </ol>
 </div>
-<form action="/word/definition/new" method="post">
-  <textarea id="new_definition" name="name" rows="8" cols="80"></textarea>
+<form action="/word/define/<%= @word.word_id %>" method="post">
+  <textarea name="new_definition" rows="8" cols="80"></textarea>
   <button type="submit" name="button">Add Definition</button>
 </form>
 <a href="/">Return to Home Page</a>
