--- a/views/index.erb
+++ b/views/index.erb
@@ -5,4 +5,4 @@
     <li><a href="/word/<%= word.word_id %>" > <%= word.word %> </a></li>
   <% end %>
 </div>
-<a href="/new_word">Add a new word</a>
+<a href="/new_word">Add a New Word</a>
