--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,8 @@
+<head>
+  <title>Words and Definition</title>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
+</head>
+<body class="container">
 <h1>Words and Definitions</h1>
 <p>Click on a word to see its definitions and add new ones.</p>
 <div class="">
@@ -6,3 +11,4 @@
   <% end %>
 </div>
 <a href="/new_word">Add a New Word</a>
+</body>
