--- a/views/new_word.erb
+++ b/views/new_word.erb
@@ -1,5 +1,11 @@
+<head>
+  <title>Make a New Word</title>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
+</head>
+<body class="container">
 <h2>Make a new word</h2>
 <form action="/new_word" method="post">
   <input id="new_word" type="text" name="new_word">
   <button type="submit" name="button">Create</button>
 </form>
+</body>
