--- a/views/word.erb
+++ b/views/word.erb
@@ -1,3 +1,8 @@
+<head>
+  <title> <%= @word.word %> </title>
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css'>
+</head>
+<body class="container">
 <h1> <%= @word.word %> </h1>
 <div class="">
   <ol>
@@ -13,3 +18,4 @@
   <button type="submit" name="button">Add Definition</button>
 </form>
 <a href="/">Return to Home Page</a>
+</body>
