remove unneccessary tags in the erb files.

--- a/views/definition.erb
+++ b/views/definition.erb
@@ -13,7 +13,7 @@
   <textarea name="new_definition" rows="8" cols="80"><%= @definition.definition %></textarea>
   <button type="submit" name="button">Update Definition</button>
 </form>
-<form class="" action="/" method="get">
+<form action="/" method="get">
   <button type="submit" name="button">cancel</button>
 </form>
 </body>
